--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -5,7 +5,17 @@
   background-color: grey;
   color: #424242;
 }
+.ff {
+  overflow: hidden;
+}
 
+.noMarker {
+  list-style-type: none;
+  font-size: 34px;
+  font-weight: 700;
+
+  color: rgb(190, 48, 48);
+}
 // .example code {
 //   font-family: monospace;
 //   font-size: 16px;
