--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -5,31 +5,50 @@
   background-color: grey;
   color: #424242;
 }
-.ff {
-  overflow: hidden;
-}
-
 .noMarker {
   list-style-type: none;
   font-size: 34px;
   font-weight: 700;
 
-  color: rgb(190, 48, 48);
+  color: rgb(5, 5, 5);
 }
-// .example code {
-//   font-family: monospace;
-//   font-size: 16px;
-//   font-weight: 700;
-//   background-color: #009688;
-//   color: #fff;
-//   padding: 2px 6px;
-//   border-radius: 2px;
-// }
+.cards-container {
+  display: flex;
+}
+.list-group {
+  padding-left: 70px;
+  list-style-type: disc;
+  color: black;
+}
+.card-img {
+  height: 300px;
+  width: 450px;
+  margin-left: 100px;
+}
+.card-img > img {
+  display: block;
+  height: 100%;
+  width: 100%;
 
-// .example .background {
-//   height: 240px;
-//   // Путь к изображениям из SASS-файла всегда такой, как из папки css
-//   background-image: url('../images/demo.jpg');
-//   background-size: cover;
-//   background-position: center;
-// }
+  object-fit: cover;
+}
+.card-title {
+  text-align: center;
+}
+.card-text {
+  font-weight: 400;
+  font-size: 50px;
+}
+.card {
+  width: fit-content;
+}
+.cardList {
+  font-weight: 400;
+  font-size: 30px;
+}
+.js-input {
+  height: 25px;
+  width: 200px;
+  font-weight: 400;
+  font-size: 18px;
+}
